<resources>
    <string name="app_name">BinSearcher</string>
    <string name="bin">BIN:</string>
    <string name="number">Number</string>
    <string name="length">Length:</string>
    <string name="luhn">Luhn:</string>
    <string name="general_information">General information:</string>
    <string name="scheme">Scheme:</string>
    <string name="type">Type:</string>
    <string name="brand">Brand:</string>
    <string name="prepaid">Prepaid:</string>
    <string name="country">Country</string>
    <string name="numeric">Numeric:</string>
    <string name="alpha2">Alpha2:</string>
    <string name="name">Name:</string>
    <string name="emoji">Emoji:</string>
    <string name="currency">Currency:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="bank">Bank</string>
    <string name="bank_name">Name:</string>
    <string name="url">Url:</string>
    <string name="phone">Phone:</string>
    <string name="city">City:</string>
    <string name="no_data">no data:</string>
    <string name="search">search</string>
    <string name="bin_hint">enter 8 digits of card</string>
    <string name="history">history</string>
    <string name="back_to_search">back to search</string>
    <string name="max_size_bin">Max size is 8 digits!</string>

</resources>