<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common"
        >

        <TextView
            android:id="@+id/number_header_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/common"
            android:text="@string/number"
            android:textAlignment="center"
            style="@style/header_text">
        </TextView>
        <TextView
            android:id="@+id/length_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/number_header_tv"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/common"
            android:layout_marginTop="@dimen/common"
            android:background="@drawable/card_tv_background"
            android:padding="@dimen/padding"
            android:text="@string/length">
        </TextView>
        <TextView
            android:id="@+id/length_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/length_tv"
            app:layout_constraintBottom_toBottomOf="@id/length_tv"
            app:layout_constraintStart_toEndOf="@id/length_tv"
            android:layout_marginStart="@dimen/common"
            android:padding="@dimen/padding">
        </TextView>
        <TextView
            android:id="@+id/luhn_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/length_tv"
            app:layout_constraintStart_toStartOf="@id/length_tv"
            android:layout_marginTop="@dimen/common"
            android:background="@drawable/card_tv_background"
            android:padding="@dimen/padding"
            android:text="@string/luhn">
        </TextView>
        <TextView
            android:id="@+id/luhn_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/luhn_tv"
            app:layout_constraintBottom_toBottomOf="@id/luhn_tv"
            app:layout_constraintStart_toEndOf="@id/luhn_tv"
            android:layout_marginStart="@dimen/common"
            android:padding="@dimen/padding">
        </TextView>
        <TextView
            android:id="@+id/general_information_header_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/luhn_tv"
            android:layout_margin="@dimen/common"
            android:textAlignment="center"
            android:text="@string/general_information"
            style="@style/header_text">
        </TextView>
        <TextView
            android:id="@+id/scheme_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/general_information_header_tv"
            app:layout_constraintStart_toStartOf="@id/length_tv"
            android:layout_marginTop="@dimen/common"
            android:background="@drawable/card_tv_background"
            android:padding="@dimen/padding"
            android:text="@string/scheme">
        </TextView>
        <TextView
            android:id="@+id/scheme_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/scheme_tv"
            app:layout_constraintBottom_toBottomOf="@id/scheme_tv"
            app:layout_constraintStart_toEndOf="@id/scheme_tv"
            android:layout_marginStart="@dimen/common"
            android:padding="@dimen/padding">
        </TextView>
        <TextView
            android:id="@+id/type_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/scheme_tv"
            app:layout_constraintStart_toStartOf="@id/length_tv"
            android:layout_marginTop="@dimen/common"
            android:background="@drawable/card_tv_background"
            android:padding="@dimen/padding"
            android:text="@string/type">
        </TextView>
        <TextView
            android:id="@+id/type_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/type_tv"
            app:layout_constraintBottom_toBottomOf="@id/type_tv"
            app:layout_constraintStart_toEndOf="@id/type_tv"
            android:layout_marginStart="@dimen/common"
            android:padding="@dimen/padding">
        </TextView>
        <TextView
            android:id="@+id/brand_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/type_tv"
            app:layout_constraintStart_toStartOf="@id/length_tv"
            android:layout_marginTop="@dimen/common"
            android:background="@drawable/card_tv_background"
            android:padding="@dimen/padding"
            android:text="@string/brand">
        </TextView>
        <TextView
            android:id="@+id/brand_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/brand_tv"
            app:layout_constraintBottom_toBottomOf="@id/brand_tv"
            app:layout_constraintStart_toEndOf="@id/brand_tv"
            android:layout_marginStart="@dimen/common"
            android:padding="@dimen/padding">
        </TextView>
        <TextView
            android:id="@+id/prepaid_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/brand_tv"
            app:layout_constraintStart_toStartOf="@id/length_tv"
            android:layout_marginTop="@dimen/common"
            android:background="@drawable/card_tv_background"
            android:padding="@dimen/padding"
            android:text="@string/prepaid">
        </TextView>
        <TextView
            android:id="@+id/prepaid_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/prepaid_tv"
            app:layout_constraintBottom_toBottomOf="@id/prepaid_tv"
            app:layout_constraintStart_toEndOf="@id/prepaid_tv"
            android:layout_marginStart="@dimen/common"
            android:padding="@dimen/padding">
        </TextView>
        <TextView
            android:id="@+id/country_header_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/prepaid_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/common"
            android:textAlignment="center"
            android:text="@string/country"
            style="@style/header_text">
        </TextView>
        <TextView
            android:id="@+id/numeric_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/country_header_tv"
            app:layout_constraintStart_toStartOf="@id/length_tv"
            android:layout_marginTop="@dimen/common"
            android:background="@drawable/card_tv_background"
            android:padding="@dimen/padding"
            android:text="@string/numeric">
        </TextView>
        <TextView
            android:id="@+id/numeric_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/numeric_tv"
            app:layout_constraintBottom_toBottomOf="@id/numeric_tv"
            app:layout_constraintStart_toEndOf="@id/numeric_tv"
            android:layout_marginStart="@dimen/common"
            android:padding="@dimen/padding">
        </TextView>
        <TextView
            android:id="@+id/alpha2_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/numeric_tv"
            app:layout_constraintStart_toStartOf="@id/length_tv"
            android:layout_marginTop="@dimen/common"
            android:background="@drawable/card_tv_background"
            android:padding="@dimen/padding"
            android:text="@string/alpha2">
        </TextView>
        <TextView
            android:id="@+id/alpha2_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/alpha2_tv"
            app:layout_constraintBottom_toBottomOf="@id/alpha2_tv"
            app:layout_constraintStart_toEndOf="@id/alpha2_tv"
            android:layout_marginStart="@dimen/common"
            android:padding="@dimen/padding">
        </TextView>
        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/alpha2_tv"
            app:layout_constraintStart_toStartOf="@id/length_tv"
            android:layout_marginTop="@dimen/common"
            android:background="@drawable/card_tv_background"
            android:padding="@dimen/padding"
            android:text="@string/name">
        </TextView>
        <TextView
            android:id="@+id/name_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/name_tv"
            app:layout_constraintBottom_toBottomOf="@id/name_tv"
            app:layout_constraintStart_toEndOf="@id/name_tv"
            android:layout_marginStart="@dimen/common"
            android:padding="@dimen/padding">
        </TextView>
        <TextView
            android:id="@+id/emoji_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/name_tv"
            app:layout_constraintStart_toStartOf="@id/length_tv"
            android:layout_marginTop="@dimen/common"
            android:background="@drawable/card_tv_background"
            android:padding="@dimen/padding"
            android:text="@string/emoji">
        </TextView>
        <TextView
            android:id="@+id/emoji_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/emoji_tv"
            app:layout_constraintBottom_toBottomOf="@id/emoji_tv"
            app:layout_constraintStart_toEndOf="@id/emoji_tv"
            android:layout_marginStart="@dimen/common"
            android:padding="@dimen/padding">
        </TextView>
        <TextView
            android:id="@+id/currency_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/emoji_tv"
            app:layout_constraintStart_toStartOf="@id/length_tv"
            android:layout_marginTop="@dimen/common"
            android:background="@drawable/card_tv_background"
            android:padding="@dimen/padding"
            android:text="@string/currency">
        </TextView>
        <TextView
            android:id="@+id/currency_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/currency_tv"
            app:layout_constraintBottom_toBottomOf="@id/currency_tv"
            app:layout_constraintStart_toEndOf="@id/currency_tv"
            android:layout_marginStart="@dimen/common"
            android:padding="@dimen/padding">
        </TextView>
        <TextView
            android:id="@+id/latitude_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/currency_tv"
            app:layout_constraintStart_toStartOf="@id/length_tv"
            android:layout_marginTop="@dimen/common"
            android:background="@drawable/card_tv_background"
            android:padding="@dimen/padding"
            android:text="@string/latitude">
        </TextView>
        <TextView
            android:id="@+id/latitude_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/latitude_tv"
            app:layout_constraintBottom_toBottomOf="@id/latitude_tv"
            app:layout_constraintStart_toEndOf="@id/latitude_tv"
            android:layout_marginStart="@dimen/common"
            android:padding="@dimen/padding">
        </TextView>
        <TextView
            android:id="@+id/longtitude_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/latitude_tv"
            app:layout_constraintStart_toStartOf="@id/length_tv"
            android:layout_marginTop="@dimen/common"
            android:background="@drawable/card_tv_background"
            android:padding="@dimen/padding"
            android:text="@string/longitude">
        </TextView>
        <TextView
            android:id="@+id/longtitude_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/longtitude_tv"
            app:layout_constraintBottom_toBottomOf="@id/longtitude_tv"
            app:layout_constraintStart_toEndOf="@id/longtitude_tv"
            android:layout_marginStart="@dimen/common"
            android:padding="@dimen/padding">
        </TextView>
        <TextView
            android:id="@+id/bank_header_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/longtitude_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/common"
            android:textAlignment="center"
            android:text="@string/bank"
            style="@style/header_text">
        </TextView>
        <TextView
            android:id="@+id/bank_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/bank_header_tv"
            app:layout_constraintStart_toStartOf="@id/length_tv"
            android:layout_marginTop="@dimen/common"
            android:background="@drawable/card_tv_background"
            android:padding="@dimen/padding"
            android:text="@string/bank_name">
        </TextView>
        <TextView
            android:id="@+id/bank_name_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/bank_name_tv"
            app:layout_constraintBottom_toBottomOf="@id/bank_name_tv"
            app:layout_constraintStart_toEndOf="@id/bank_name_tv"
            android:layout_marginStart="@dimen/common"
            android:padding="@dimen/padding">
        </TextView>
        <TextView
            android:id="@+id/url_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/bank_name_tv"
            app:layout_constraintStart_toStartOf="@id/length_tv"
            android:layout_marginTop="@dimen/common"
            android:background="@drawable/card_tv_background"
            android:padding="@dimen/padding"
            android:text="@string/url">
        </TextView>
        <TextView
            android:id="@+id/url_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/url_tv"
            app:layout_constraintBottom_toBottomOf="@id/url_tv"
            app:layout_constraintStart_toEndOf="@id/url_tv"
            android:padding="@dimen/padding"
            android:layout_marginStart="@dimen/common">
        </TextView>
        <TextView
            android:id="@+id/phone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/url_tv"
            app:layout_constraintStart_toStartOf="@id/length_tv"
            android:layout_marginTop="@dimen/common"
            android:background="@drawable/card_tv_background"
            android:padding="@dimen/padding"
            android:text="@string/phone">
        </TextView>
        <TextView
            android:id="@+id/phone_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/phone_tv"
            app:layout_constraintBottom_toBottomOf="@id/phone_tv"
            app:layout_constraintStart_toEndOf="@id/phone_tv"
            android:layout_marginStart="@dimen/common"
            android:padding="@dimen/padding">
        </TextView>
        <TextView
            android:id="@+id/city_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/phone_tv"
            app:layout_constraintStart_toStartOf="@id/length_tv"
            android:layout_marginTop="@dimen/common"
            android:layout_marginBottom="@dimen/common"
            android:background="@drawable/card_tv_background"
            android:padding="@dimen/padding"
            android:text="@string/city">
        </TextView>
        <TextView
            android:id="@+id/city_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/city_tv"
            app:layout_constraintBottom_toBottomOf="@id/city_tv"
            app:layout_constraintStart_toEndOf="@id/city_tv"
            android:padding="@dimen/padding"
            android:layout_marginStart="@dimen/common">
        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>



